--- a/AdvancedBIMLog/AdvancedBIMLog/AdvancedBIMLog.csproj
+++ b/AdvancedBIMLog/AdvancedBIMLog/AdvancedBIMLog.csproj
@@ -30,6 +30,10 @@
     <Reference Include="System.Windows.Forms">
       <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.WindowsDesktop.App.Ref\8.0.11\ref\net8.0\System.Windows.Forms.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase">
+      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.WindowsDesktop.App.Ref\8.0.11\ref\net8.0\WindowsBase.dll</HintPath>
+    </Reference>
   </ItemGroup>
+
 
 </Project>
